manifests/grafana-ingress/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: loki
  annotations:
    cert-manager.io/issuer: grafana-letsencrypt
spec:
  ingressClassName: nginx
  rules:
  - host: "grafana.devops-demo.reinier.co.za"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: loki-grafana
            port:
              number: 80
  tls:
  - hosts:
    - "grafana.devops-demo.reinier.co.za"
    secretName: grafana-tls-secret
